# grcompat

./: CMakeLists.txt  README.md  foobarz.cpp  gnuradio-core.pc.in  gruel.pc.in
include/grcompat/: gnuradio_swig_bug_workaround.h  gr_basic_block.h  gr_block.h  gr_complex.h  gr_count_bits.h  gr_endianness.h  gr_feval.h  gr_hier_block2.h  gr_io_signature.h  gr_math.h  gr_message.h  gr_msg_queue.h  gr_random.h  gr_sync_block.h  gr_sync_decimator.h  gr_sync_interpolator.h  gr_tags.h  pmx_helper.hpp
include/grcompat/gruel/: msg_accepter.h  pmt.h  thread.h
include/grcompat/swig/: gnuradio.i
python/gruel/: __init__.py
